--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@svgr/webpack": "^5.5.0",
+    "@svgr/webpack": "^6.1.2",
     "@types/node": "14.14.37",
     "@types/react": "17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
@@ -27,5 +27,17 @@
     "stylelint-order": "^4.1.0",
     "stylelint-order-config-standard": "^0.1.3",
     "typescript": "^4.2.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
