--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "date-fns": "^2.30.0",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.65.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.1.2",
